--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 	</head>
 	
-	<h1>Crosstalk</h1>
+	<h1 id="heading">Crosstalk</h1>
 
 	<div id="card"></div>
 	
