layout changes changes to button click behavior

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 	</head>
 	
-	<h1 id="heading">Crosstalk</h1>
+	<h1>Crosstalk</h1>
 
+	<div id="number"></div>
 	<div id="card"></div>
 	
-	<input class="nextButton" type="button" onclick="nextCard()" value="next">
+	<input type="button" onclick="nextCard()" value="next">
 	
 	
 	<p>official page: <a href="http://www.nauvoogames.com/crosstalk">http://www.nauvoogames.com/crosstalk</a></p>
